# libmongo-client

./: .gitignore  .travis.yml  Doxyfile  Doxyfile.in  Makefile.am  NEWS  README.md  README.rst  annotated.html  api.html  api_8h_source.html  bson_8c.html  bson_8c__incl.map  bson_8c__incl.md5  bson_8c_source.html  bson_8h.html  bson_8h__dep__incl.map  bson_8h__dep__incl.md5  bson_8h__incl.md5  bson_8h_source.html  classes.html  compat_8c_source.html  compat_8h_source.html  configure.ac  dir_49e56c817e5e54854c35e136979f97ca.html  dir_49e56c817e5e54854c35e136979f97ca_dep.map  dir_49e56c817e5e54854c35e136979f97ca_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_e1a497cca65ccf37bc42759cf68ea0a9.html  dir_e1a497cca65ccf37bc42759cf68ea0a9_dep.map  dir_e1a497cca65ccf37bc42759cf68ea0a9_dep.md5  files.html  functions.html  functions_vars.html  globals.html  globals_0x62.html  globals_0x6c.html  globals_0x6d.html  globals_0x6f.html  globals_defs.html  (+517 more)
debian/: README.source  changelog  control  copyright  gbp.conf  libmongo-client-doc.install  libmongo-client0.symbols  rules  source.lintian-overrides
doc/: Makefile.am
docs/: Makefile.am  api.h
docs/tutorial/: Makefile.am  tut_bson.h  tut_bson_traverse.h  tut_hl_client.h  tut_mongo_sync.h  tut_mongo_sync_connect.h  tut_mongo_sync_query.h  tutorial.h
docs/tutorial/examples/: GNUmakefile  tut_bson_build.c  tut_bson_traverse.c  tut_hl_client.c  tut_json2bson.c  tut_mongo_sync.c  tut_mongo_sync_connect.c
examples/: bson-inspect.c  gridfs.c  mongo-dump.c
lib/: Makefile.am  bson-element-simple.c.in  bson-element-stringish.c.in  bson-element.c  bson.c  bson_oid.c  libbeejr.pc.in  libbeejr.ver  libmongo-client.pc.in  libmongo-client.ver  lmc-bson.c  lmc-bson.h  lmc-common.h  lmc-endian.h  lmc-error.h  lmc-private.h  lmc.h  mongo-wire.c
lib/lmc/: bson-element.h  bson.h  bson_oid.h  common.h  endian.h  error.h  private.h
lib/lmc/mongo/: wire.h
search/: all_1.js  all_11.js  all_14.js  all_15.js  all_16.js  all_3.js  all_4.js  all_5.js  all_5f.html  all_61.html  all_61.js  all_62.html  all_62.js  all_63.js  all_64.html  all_66.html  all_67.html  all_68.html  all_68.js  all_69.html  all_69.js  all_6c.html  all_6c.js  all_6d.html  all_6d.js  all_6f.html  all_6f.js  all_70.html  all_70.js  all_72.html  all_72.js  all_73.html  all_73.js  all_74.html  all_74.js  all_76.html  all_77.js  all_a.js  all_c.js  all_f.js  (+86 more)
src/: Makefile.am  bson.c  bson.h  compat.c  compat.h  libmongo-client.ver  libmongo-macros.h  libmongo-private.h  mongo-client.c  mongo-client.h  mongo-ssl.c  mongo-ssl.h  mongo-sync-cursor.c  mongo-sync-cursor.h  mongo-sync-pool.c  mongo-sync-pool.h  mongo-sync.c  mongo-sync.h  mongo-utils.c  mongo-utils.h  mongo-wire.c  mongo-wire.h  mongo.h  sync-gridfs-chunk.c  sync-gridfs-chunk.h  sync-gridfs-stream.c  sync-gridfs-stream.h  sync-gridfs.c  sync-gridfs.h
t/: Makefile.am  check_bson_element_func.c  check_bson_element_unit.c  check_bson_func.c  check_bson_perf.c  check_bson_unit.c  coverage.sh  test_cleanup.c
t/func/bson/: f_bson_chained.c  f_bson_empty.c  f_bson_huge_doc.c  f_bson_weird_types.c
t/libtap/: Makefile.am  test.c  test.h
t/perf/bson/: p_bson_find.c
t/tools/: coverage-report.pl  coverage.sh
t/unit/bson/: bson_append_array.c  bson_append_binary.c  bson_append_boolean.c  bson_append_document.c  bson_append_double.c  bson_append_int32.c  bson_append_int64.c  bson_append_js_code.c  bson_append_js_code_w_scope.c  bson_append_null.c  bson_append_oid.c  bson_append_regexp.c  bson_append_string.c  bson_append_symbol.c  bson_append_timestamp.c  bson_append_utc_datetime.c  bson_cursor_find.c  bson_cursor_get_array.c  bson_cursor_get_binary.c  bson_cursor_get_boolean.c  bson_cursor_get_document.c  bson_cursor_get_double.c  bson_cursor_get_int32.c  bson_cursor_get_int64.c  bson_cursor_get_javascript.c  bson_cursor_get_javascript_w_scope.c  bson_cursor_get_oid.c  bson_cursor_get_regex.c  bson_cursor_get_string.c  bson_cursor_get_symbol.c  bson_cursor_get_timestamp.c  bson_cursor_get_utc_datetime.c  bson_cursor_key.c  bson_cursor_new.c  bson_cursor_next.c  bson_cursor_type.c  bson_cursor_type_as_string.c  bson_new.c  bson_new_from_data.c  bson_reset.c  (+2 more)
t/unit/bson/oid/: bson_oid_as_string.c  bson_oid_init.c  bson_oid_new.c  bson_oid_new_with_time.c
t/unit/mongo/wire/: cmd_custom.c  cmd_delete.c  cmd_get_more.c  cmd_insert.c  cmd_insert_n.c  cmd_kill_cursors.c  cmd_query.c  cmd_update.c  packet_get_set_data.c  packet_get_set_header.c  packet_get_set_header_raw.c  packet_new.c  reply_packet_get_data.c  reply_packet_get_header.c  reply_packet_get_nth_document.c
tests/: Makefile.am  README  coverage.sh  gen_coverage.sh  runall  test_cleanup.c
tests/func/mongo/client/: f_client_big_packet.c
tests/func/mongo/sync/: f_ssl.c  f_sync_auto_reauth.c  f_sync_auto_reconnect_cache.c  f_sync_safe_mode.c  f_sync_safe_mode_cache.c  f_sync_write_error.c
tests/func/mongo/sync-cursor/: f_sync_cursor_iterate.c
tests/func/mongo/sync-gridfs/: f_sync_gridfs.c
tests/func/mongo/sync-gridfs-chunk/: f_sync_gridfs_chunk.c
tests/func/mongo/sync-gridfs-stream/: f_sync_gridfs_stream.c
tests/func/mongo/sync-pool/: f_sync_pool.c
tests/libtap/: tap.c  test.c  test.h
tests/perf/bson/: p_bson_find.c
tests/ssl/: env_setup
tests/ssl/3party/: .gitignore  ca.conf
tests/unit/mongo/client/: connect.c  connect_ssl.c  packet_recv_ssl.c  packet_send_ssl.c
tests/unit/mongo/sync/: sync_cmd_create.c  (+12 more)
tests/unit/mongo/sync-cursor/: sync_cursor_get_data.c  sync_cursor_next.c
tests/unit/mongo/sync-gridfs/: sync_gridfs_file_cursor_get_chunk.c  sync_gridfs_file_cursor_new.c  sync_gridfs_file_free.c  sync_gridfs_file_new_from_buffer.c  sync_gridfs_find.c  sync_gridfs_free.c  sync_gridfs_get_set_chunk_size.c  sync_gridfs_list.c  sync_gridfs_new.c
tests/unit/mongo/sync-gridfs-chunk/: sync_gridfs_chunked_file_cursor_get_chunk.c
tests/unit/mongo/sync-gridfs-stream/: sync_gridfs_stream_close.c  sync_gridfs_stream_from_file.c  sync_gridfs_stream_new.c  sync_gridfs_stream_read.c  sync_gridfs_stream_seek.c  sync_gridfs_stream_write.c
(+1 files in other folders)
