EXTRA_DIST	= tutorial.h \
		  examples/GNUmakefile \
		  tut_bson.h \
			tut_bson_build.h examples/tut_bson_build.c examples/tut_bson_build.json \
			tut_bson_traverse.h examples/tut_bson_traverse.c \
		  tut_mongo_sync.h \
			tut_mongo_sync_connect.h examples/tut_mongo_sync_connect.c \
		  tut_hl_client.h examples/tut_hl_client.c
